--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/custom.css" media="all"/>
 	<link rel='stylesheet' id='aos-css' href='css/aos.css' type='text/css' media='all' />
 	<link rel='stylesheet' id='ionicons-css' href='css/ionicons.min.css' type='text/css' media='all' />
-	<link rel='stylesheet' id='font-awesome-css' href='css/font-awesome.min.css' type='text/css' media='all' />
+	<link rel='stylesheet' id="font-awesome-css" href="css/font-awesome.min.css" type="text/css" media="all" />
 	<link rel="stylesheet" href="css/shortcodes.css" type="text/css" media="all" />
 	<link rel='stylesheet' id='norebro-global-fonts-css' href="css/fonts.css" type='text/css' media='all' />
 	<script type='text/javascript' src='js/jquery.js'></script>
